fix fundal – corectat acolada

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Dacă vrei să folosești o imagine în loc de gradient:
    1. Pune imaginea în public/assets/bg.jpg
-   2. Deblochează liniile de mai jos (șterge /* */)
+   2. Deblochează liniile de mai jos (șterge /* */
 */
 /*
 body {
